Create authorization for callouts and for user profiles

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
 <p> Users show!</p>
+Email address: <%= @user.email %><br />
+Name: <%= @user.first_name %><%= @user.last_name %><br />
+Bio: <%= @user.bio %><br />
+Organization: <%= @user.organization %><br />
+Location: <%= @user.location %>
