--- a/app/views/callouts/_callout.html.erb
+++ b/app/views/callouts/_callout.html.erb
@@ -1,5 +1,7 @@
-<%= link_to callout.subject, callout %>
-  <p>
-    <%= callout.deadline %><br />
-    <%= callout.description %>
-  </p>
+<% if current_user.user_role_id == 2 || current_user.id == callout.user_id %>
+  <%= link_to callout.subject, callout %>
+    <p>
+      <%= callout.deadline %><br />
+      <%= callout.description %>
+    </p>
+<% end %>
