--- a/app/views/callouts/edit.html.erb
+++ b/app/views/callouts/edit.html.erb
@@ -1,1 +1,7 @@
-<h1>Edit callout</h1>
+<% if current_user.user_role_id == 1 %>
+  <h1>Edit callout, homie</h1>
+  <%= render "form" %>
+<% else %>
+  <h1>Edit story suggestion</h1>
+  <%= render "form_suggest" %>
+<% end %>
