--- a/app/views/callouts/new.html.erb
+++ b/app/views/callouts/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Create new callout, homie</h1>
-<%= render "form" %>
+<% if current_user.user_role_id == 1 %>
+  <h1>Create new callout, homie</h1>
+  <%= render "form" %>
+<% else %>
+  <h1>Create new story suggestion</h1>
+  <%= render "form_suggest" %>
+<% end %>
