--- a/app/views/callouts/new.html.erb
+++ b/app/views/callouts/new.html.erb
@@ -1,7 +1,5 @@
 <% if current_user.user_role_id == 1 %>
-  <h1>Create new callout, homie</h1>
-  <%= render "form" %>
+  <%= render "callouts/form", :header => "Create new callout, homie", :end_time => "Deadline" %>
 <% else %>
-  <h1>Create new story suggestion</h1>
-  <%= render "form_suggest" %>
+  <%= render "callouts/form", :header => "Create new story suggestion, dork", :end_time => "Expiration Date" %>
 <% end %>
