--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -47,6 +47,10 @@
      <%= f.text_area :bio %>
   </div>
 
+  <div class="interests">
+    <%= render "interests/interests_render" %>
+  </div>
+
     <div class="actions"><%= f.submit %></div>
 
 <% end %>
