--- a/app/views/callouts/show.html.erb
+++ b/app/views/callouts/show.html.erb
@@ -3,14 +3,17 @@
 <p>Deadline: <%= @callout.deadline %></p>
 <p>Description: <%= @callout.description %> </p>
 
-
 <% @callout.replies.each do |r| %>
+<% if r.id %>
   <%= r.comment %><br />
   <%= r.created_at %><br />
   <%= r.sender.first_name %><br /><br />
 <% end %>
+<% end %>
 
 <%= form_for ([@callout, @reply]) do |f| %>
+
+
   <div class="field">
     <%= f.label :comment%><br />
     <%= f.text_area :comment %>
