--- a/app/views/callouts/show.html.erb
+++ b/app/views/callouts/show.html.erb
@@ -4,11 +4,25 @@
 <p>Description: <%= @callout.description %> </p>
 
 <% @callout.replies.each do |r| %>
-<% if r.id %>
-  <%= r.comment %><br />
-  <%= r.created_at %><br />
-  <%= r.sender.first_name %><br /><br />
-<% end %>
+  <% if r.id %>
+    <%= r.comment %><br />
+    <%= r.created_at %><br />
+    <%= r.sender.first_name %><br />
+<%= form_for ([@callout, @reply]) do |f| %>
+
+
+      <div class="field">
+        <%= f.label :comment%><br />
+        <%= f.text_area :comment %>
+        <%= f.hidden_field :receiver_id, :value => r.sender_id %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Post comment"%>
+      </div>
+    <% end %>
+    <br />
+  <% end %>
 <% end %>
 
 <%= form_for ([@callout, @reply]) do |f| %>
@@ -17,6 +31,7 @@
   <div class="field">
     <%= f.label :comment%><br />
     <%= f.text_area :comment %>
+
   </div>
 
   <div class="actions">
