Made user interests ui

--- a/app/views/callouts/index.html.erb
+++ b/app/views/callouts/index.html.erb
@@ -4,7 +4,7 @@
   <div>
    <% @media_callouts.each do |c| %>
     <% if current_user.id == c.user_id %>
-      <%= link_to c.subject, callout_path(c.id) %>
+      <li><%= link_to c.subject, callout_path(c.id) %></li>
     <% end %>
   <% end %>
   </div>
@@ -14,7 +14,7 @@
   
   <div>
     <% @story_suggests.each do |s| %>
-      <%= link_to s.subject, callout_path(s.id) %>
+      <li><%= link_to s.subject, callout_path(s.id) %></li>
     <% end %>
   </div>
 
@@ -23,13 +23,13 @@
   <h1>Your Story Suggestions</h1>
   <% @story_suggests.each do |s| %>
     <% if current_user.id == s.user_id %>
-      <%= link_to s.subject, callout_path(s.id) %>
+      <li><%= link_to s.subject, callout_path(s.id) %></li>
     <% end %>
   <% end %>
   
   <h1>Media Callouts</h1>
     <% @media_callouts.each do |c| %>
-      <%= link_to c.subject, callout_path(c.id) %>
+      <li><%= link_to c.subject, callout_path(c.id) %></li>
     <% end %>
   
 <% end %>
