--- a/app/views/callouts/edit.html.erb
+++ b/app/views/callouts/edit.html.erb
@@ -1,7 +1,5 @@
-<% if is_media? %>
-  <h1>Edit callout, homie</h1>
-  <%= render "form" %>
+<% if current_user.user_role_id == 1 %>
+  <%= render "callouts/form", :header => "Edit your callout, homie", :end_time => "Deadline" %>
 <% else %>
-  <h1>Edit story suggestion</h1>
-  <%= render "form_suggest" %>
+  <%= render "callouts/form", :header => "Edit your story suggestion, dork", :end_time => "Expiration Date" %>
 <% end %>
