--- a/app/views/callouts/_inbox.html.erb
+++ b/app/views/callouts/_inbox.html.erb
@@ -7,11 +7,10 @@
   <% end %>
 
   <dl class="tabs vertical" data-tab>
-    <% messengers.compact.uniq.sort.each do |m| %>
+    <% messengers.compact!.uniq!.sort!.each do |m| %>
       <dd><a class="messenger" href="#<%=m.id%>" data-id="<%=m.id%>" data-callout="<%=@callout.id%>"><%= m.first_name %></a><dd>
     <% end %>
   </dl>
-  <div class="tabs-content vertical" id="messages-content">
     <%= render :partial => "messages", :locals => {:callout => @callout, :messenger => messengers.first, :reply => @reply } %>
-  </div>
+
 <% end %>
