--- a/app/views/callouts/_messages.html.erb
+++ b/app/views/callouts/_messages.html.erb
@@ -1,10 +1,11 @@
+<div class="tabs-content vertical" id="messages-content">
   <div class="content active" id="<%=messenger.id%>">
   <% callout.replies.each do |r| %>
     <% if (messenger == r.sender) || (messenger.id == r.receiver_id) %>
       <p><%=r.comment%> <em>by <%= r.sender.first_name %> on <%=r.created_at%></em>
     <% end %>
   <% end %>
-    <%= form_for ([callout, reply]) do |f| %>
+    <%= form_for [callout, reply], :remote => true do |f| %>
       <div class="field">
         <%= f.label :comment%><br />
         <%= f.text_area :comment %>
@@ -13,8 +14,8 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Post comment"%>
+        <%= f.submit "Post comment", :id => "reply_button" %>
       </div>
     <% end %>
-
   </div>
+</div>
