--- a/app/views/callouts/new.html.erb
+++ b/app/views/callouts/new.html.erb
@@ -1,5 +1,7 @@
 <% if current_user.user_role_id == 1 %>
+<p><%="#{@interested_sources.length} sources share your usual interests."%></p>
   <%= render "callouts/form", :header => "Create new callout, homie", :end_time => "Deadline" %>
 <% else %>
+  <p><%="#{@interested_media.length} members of the media share your usual interests."%></p>
   <%= render "callouts/form", :header => "Create new story suggestion, dork", :end_time => "Expiration Date" %>
 <% end %>
