--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
 
  *= require_tree .
  */
+
+.registration {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+}
+
+.registration.buttons {
+  background-color: #EEE;
+  padding: 15px;
+  box-shadow: 0px 0px 20px #888888;
+}
+
+.registration.buttons:hover {
+  cursor: pointer;
+  background-color: #EEE;
+  padding: 15px;
+  box-shadow: 0px 0px 2px #000000;
+}
+
+
+
+.row.registration-panel {
+  background-color: #EEE;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.buttons {
+  width:40%;
+  height:40%;
+}
+
+#login {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+
+}
