--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,10 +52,15 @@
 
   </section>
 </nav>
-    <div>
-    <p id="notice"><%= flash[:notice] %></p>
-    <p id="alert"><%= flash[:alert] %></p>
-  </div>
+
+
+  <% if flash[:notice] %>
+    <div style="text-align:center" id="notice" data-notice class="alert-box info radius"><%= flash[:notice] %></div>
+  <% end %>
+  <% if flash[:alert] %>
+    <div style="text-align:center" id="alert" data-alert class="alert-box warning radius"><%= flash[:alert] %></div>
+  <% end %>
+
   <div class="row">
     <div class="small-10 large-centered columns">
       <%= yield %>
