--- a/app/views/callouts/index.html.erb
+++ b/app/views/callouts/index.html.erb
@@ -1,12 +1,18 @@
 <% if current_user.user_role_id == 1 %>
   <h1>Story Suggestions</h1>
   <%= render :partial => "callouts_render_index", :locals => {:media_callouts => @media_callouts, :story_suggests => @story_suggests} %> 
-<% else %>  
+  
+<p><%="#{@story_suggests.length} callouts match your interests." %></p>
+<h3>Filter Callouts by Interests</h3>
+<% else %>
+
   <h1>Media Callouts</h1>
   <%= render :partial => "callouts_render_index", :locals => {:media_callouts => @media_callouts, :story_suggests => @story_suggests} %>
+  <p><%="#{@media_callouts.length} callouts match your interests." %></p>
+  <h3>Filter Callouts by Interests</h3>
 <% end %>
 
-<h3>Filter Callouts by Interests</h3>
-<p><%="#{@media_callouts.length} callouts match your interests." %></p>
+
+
 
  <%= render "interests/interests_render" %>
