--- a/app/views/callouts/_messages.html.erb
+++ b/app/views/callouts/_messages.html.erb
@@ -15,6 +15,7 @@
 
       <div class="actions">
         <%= f.submit "Post comment", :id => "reply_button" %>
+        <span class='countdown'>300 characters remaning.</span>
       </div>
     <% end %>
   </div>
