--- a/app/views/callouts/index.html.erb
+++ b/app/views/callouts/index.html.erb
@@ -1,4 +1,23 @@
-<% if current_user.user_role_id == 1 %>
+
+
+
+
+
+
+
+<div class="off-canvas-wrap">
+  <div class="inner-wrap">
+
+    <a class="left-off-canvas-toggle" >Filter Callouts by Interests</a> 
+
+    <!-- Off Canvas Menu -->
+    <aside class="left-off-canvas-menu">
+        <!-- whatever you want goes here -->
+        <%= render "interests/interests_render" %>
+    </aside>
+
+    <!-- main content goes here -->
+    <% if current_user.user_role_id == 1 %>
   <h1>Story Suggestions</h1>
   <%= render :partial => "callouts_render_index", :locals => {:media_callouts => @media_callouts, :story_suggests => @story_suggests} %> 
   
@@ -12,7 +31,13 @@
   <h3>Filter Callouts by Interests</h3>
 <% end %>
 
+  <!-- close the off-canvas menu -->
+  <a class="exit-off-canvas"></a>
+
+  </div>
+</div>
 
 
 
- <%= render "interests/interests_render" %>
+
+ 
