--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
         <% else %>
           <li><%= link_to "View Media Callouts", callouts_path %> </li>
           <li><%= link_to "Suggest a Story", new_callout_path %></li>
-        <% end %>
+        <% end %>2
       <% end %>
     </ul>
 
@@ -62,7 +62,7 @@
   <% end %>
 
   <div class="row">
-    <div class="small-10 large-centered columns">
+    <div class="small-12 large-centered columns">
       <%= yield %>
     </div>
   </div>
