--- a/app/assets/stylesheets/callouts.css.scss
+++ b/app/assets/stylesheets/callouts.css.scss
@@ -1,3 +1,48 @@
 // Place all the styles related to the callouts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+aside h2{
+  color: #FFFFFF;
+}
+
+aside dd{
+  clear: left;
+  width: 100%;
+
+}
+
+aside input[name='interests[]']{
+  clear: left;
+}
+
+aside#issues.content{
+  clear: left;
+}
+
+div content{
+  background: #fff;
+  color: #222222
+}
+
+.one-line{
+  color: #222222;
+  background: white;
+  width: 100%;
+
+}
+
+.callout-display{
+  height: 130px;
+  width: 130px;
+  background: white;
+  margin: 50px;
+  float: left;
+  box-shadow: 0px 0px 3px 4px #E3E3E3;
+  padding: 8px;
+}
+
+.callout-display:hover{
+  box-shadow: 0px 0px 3px 4px #BEBEBE;
+}
