--- a/app/views/callouts/_callouts_render_index.html.erb
+++ b/app/views/callouts/_callouts_render_index.html.erb
@@ -2,10 +2,8 @@
     
   <div class="calls">
     <% story_suggests.each do |s| %>
-      <li><%= link_to s.subject, callout_path(s.id) %>        
-        <% s.interests.each do |i| %>
-          <%= i.name %>
-        <% end %></li>
+      <div class="callout-display"><%= link_to s.subject, callout_path(s.id) %>        
+      </div>
       
      
     <% end %>
@@ -13,11 +11,9 @@
 <% else %>  
   <div class="calls">
     <% media_callouts.each do |c| %>
-      <li><%= link_to c.subject, callout_path(c.id) %>
-        <% c.interests.each do |i| %>
-          <%= i.name %>
-        <% end %>
-      </li>
+      <div class="callout-display">
+        <%= link_to c.subject, callout_path(c.id) %>
+      </div>
     <% end %>
   </div>
 <% end %>
