Finalized homepage, authentication issues, and redirect to users show if logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         </li>
       <% else %>
         <li class="active"><%= link_to "Login", :login %></li>
-        <li><%= link_to "Register", new_user_path %></li>
+        <li><%= link_to "Register", root_url %></li>
       <% end %>
     </ul>
 
