--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,2 @@
 <h1>Create new user</h1>
-<%= render :partial => "form", :object => @user %>
+<%= render :partial => "register", :object => @user %>
