--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,24 @@
 <%= form_for @user do |f| %>
 
   <div class="field">
+  <%= f.hidden_field :user_role_id, value: @user.user_role_id %></div>
+
+  <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
+
+  <div class="field">
     <%= f.label :organization %><br />
     <%= f.text_field :organization %>
   </div>
@@ -18,6 +36,7 @@
   <div class="interests">
     <%= render "interests/interests_render" %>
   </div>
+
 
     <div class="actions"><%= f.submit %></div>
 
