--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
         <% else %>
           <li><%= link_to "View Media Callouts", callouts_path %> </li>
           <li><%= link_to "Suggest a Story", new_callout_path %></li>
-        <% end %>2
+        <% end %>
       <% end %>
     </ul>
 
