--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,24 @@
   <div class="large-4 columns left-col">
-    <h3><%= link_to "Edit your profile",  edit_user_path %></h3>
-    <h1><%= @user.first_name.capitalize %> <%= @user.last_name.capitalize %></h1>
+    <% if current_user == @user %>
+      <p id="editbutton"><%= link_to "Edit your profile",  edit_user_path %></p>
+    <% end %>
+    <div class="lowerleft">
+      <h1><%= @user.first_name.capitalize %> <%= @user.last_name.capitalize %></h1>
 
-    <h3><%= image_tag 'download.jpeg', size:"30" %><%= @user.email %></h3>
-    <h3><%= image_tag 'place-512.png', size:"30" %><%= @user.location %></h3>
+      <h3><%= image_tag 'download.jpeg', size:"30" %><%= @user.email %></h3>
+      <h3><%= image_tag 'place-512.png', size:"30" %><%= @user.location %></h3>
 
-    <h3><%= @user.bio %></h3>
-    <h3><%= @user.organization %></h3>
-
-    <h3>Interests:
-    <% @user.interests.each do |i| %>
-      <li><%= i.topic %>: <%= i.name %></li>
-    <% end %></h3>
-
+      <h3><%= @user.bio %></h3>
+      <h3><%= @user.organization %></h3>
+      <div class="interests">
+      <h3>Interests:</h3>
+      
+        <p>
+        <% @user.interests.each do |i| %>
+          <li><%= i.topic %>: <%= i.name %></li>
+        <% end %></p>
+      </div>
+    </div>
   </div>
   <div class="large-8 columns right-col">
     <h3>Your activity:</h3>
