--- a/app/views/interests/_interests_render.html.erb
+++ b/app/views/interests/_interests_render.html.erb
@@ -1,4 +1,9 @@
 <h2>What are you interested in?</h2>
+<% if current_user.user_role_id == 1 %>
+  <p><%="#{@story_suggests.length} callouts match your interests." %></p>
+<% else %>
+  <p><%="#{@media_callouts.length} callouts match your interests." %></p>
+<% end %>
 <dl class="tabs" data-tab>
   <dd class="active"><a href="#issues">Issues</a></dd>
   <dd><a href="#locations">Locations</a></dd>
