--- a/app/views/callouts/index.html.erb
+++ b/app/views/callouts/index.html.erb
@@ -13,7 +13,7 @@
 
     <!-- main content goes here -->
     <% if current_user.user_role_id == 1 %>
-  <h1>Story Suggestions</h1>
+  <h1 class="callout_headline">Story Suggestions</h1>
   <%= render :partial => "callouts_render_index", :locals => {:media_callouts => @media_callouts, :story_suggests => @story_suggests} %> 
   
 
