--- a/app/views/interests/_interests_render.html.erb
+++ b/app/views/interests/_interests_render.html.erb
@@ -1,8 +1,12 @@
 <h2>What are you interested in?</h2>
 <% if current_user.user_role_id == 1 %>
+  <% if @story_suggests %>
   <p><%="#{@story_suggests.length} callouts match your interests." %></p>
+  <% end %>
 <% else %>
+  <% if @media_callouts %>
   <p><%="#{@media_callouts.length} callouts match your interests." %></p>
+  <% end %>
 <% end %>
 <dl class="tabs" data-tab>
   <dd class="active"><a href="#issues">Issues</a></dd>
