--- a/app/views/callouts/_messages.html.erb
+++ b/app/views/callouts/_messages.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Post comment", :id => "reply_button" %>
+        <%= f.submit "Reply", :id => "reply_button" %>
         <span class='countdown'>300 characters remaning.</span>
       </div>
     <% end %>
