--- a/app/assets/stylesheets/callouts.css.scss
+++ b/app/assets/stylesheets/callouts.css.scss
@@ -37,6 +37,7 @@ div content{
   color: #222222;
   background: white;
   width: 100%;
+  display: inline;
 
 }
 
@@ -67,4 +68,25 @@ div content{
 
 .callout-display:hover{
   box-shadow: 0px 0px 3px 4px #00a6cf;
+}
+
+#callout_deadline_1i {
+  display: inline;
+  width: 18%;
+}
+#callout_deadline_2i {
+  display: inline;
+  width: 18%;
+}
+#callout_deadline_3i {
+  display: inline;
+  width: 18%;
+}
+#callout_deadline_4i {
+  display: inline;
+  width: 18%;
+}
+#callout_deadline_5i {
+  display: inline;
+  width: 18%;
 }
