--- a/app/views/callouts/new.html.erb
+++ b/app/views/callouts/new.html.erb
@@ -1,7 +1,11 @@
-<% if current_user.user_role_id == 1 %>
-<p><%="#{@interested_sources.length} sources share your usual interests."%></p>
-  <%= render "callouts/form", :header => "Create new callout, homie", :end_time => "Deadline" %>
-<% else %>
-  <p><%="#{@interested_media.length} members of the media share your usual interests."%></p>
-  <%= render "callouts/form", :header => "Create new story suggestion, dork", :end_time => "Expiration Date" %>
-<% end %>
+<div class="row">
+  <div class="small-12 small-centered columns">
+    <% if current_user.user_role_id == 1 %>
+    <p><%="#{@interested_sources.length} sources share your usual interests."%></p>
+      <%= render "callouts/form", :header => "Create a new Callout", :end_time => "Deadline" %>
+    <% else %>
+      <p><%="#{@interested_media.length} members of the media share your usual interests."%></p>
+      <%= render "callouts/form", :header => "Create a New Story Suggestion", :end_time => "Expiration Date" %>
+    <% end %>
+  </div>
+</div>
