--- a/app/views/interests/_interests_render.html.erb
+++ b/app/views/interests/_interests_render.html.erb
@@ -1,4 +1,4 @@
-<h2>What are you interested in?</h2>
+<h4>What are you interested in?</h4>
 <% if current_user.user_role_id == 1 %>
   <% if @story_suggests %>
   <p><%="#{@story_suggests.length} callouts match your interests." %></p>
@@ -17,13 +17,12 @@
 <div class="tabs-content">
 
   <div class="content" id="locations">
-    <dl class="accordion" data-accordion>
       <% main_parents = @location_interests.select { |i| i if i.parent_id == 0 } %>
       <% main_parents.each do |p| %>
-        <dd id="<%=p.id%>"><a href="#panel<%="#{p.id}"%>"><%=p.name%></a>
-          <% children = @location_interests.select { |i| i if i.parent_id == p.id} %>
+        <h3 id="<%=p.id%>" ><%=p.name%></a>
+          <% children = @location_interests.select { |i| i if i.parent_id == p.id} %></h3><hr />
           <% if !children.empty? %>
-            <div id="panel<%="#{p.id}"%>" class="content" >
+            <div id="panel<%="#{p.id}"%>" class="content active" >
               <%= check_box_tag 'all', p.id, false, :id => "all" %>
                 <%= label_tag "all", "All" %>
               <% children.each do |i| %>
@@ -39,9 +38,7 @@
               <% end %>
             </div>
           <% end %>
-        </dd>
       <% end %>
-    </dl>
   </div>
 
   <div class="content active" id="issues">
