--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
   <div class="large-4 columns left-col">
-    <% if current_user == @user %>
-      <p id="editbutton"><%= link_to "Edit your profile",  edit_user_path %></p>
-    <% end %>
+
     <div class="lowerleft">
       <h1><%= @user.first_name.capitalize %> <%= @user.last_name.capitalize %></h1>
+      <% if current_user == @user %>
+        <p id="editbutton"><%= link_to "Edit your profile",  edit_user_path %></p>
+      <% end %>
 
-      <h3><%= image_tag 'download.jpeg', size:"30" %><%= @user.email %></h3>
+      <h3><%= image_tag 'email.png', size:"30" %> <%= @user.email %></h3>
       <h3><%= image_tag 'place-512.png', size:"30" %><%= @user.location %></h3>
 
       <h3><%= @user.bio %></h3>
